syntax = "proto3";
package outer;
option  go_package = "/outer";

enum Position {
    NoAlliance     = 0;
    Normal         = 1; // 普通成员
    ViceCaptain    = 2; // 小队长
    Captain        = 3; // 队长
    Manager        = 4; // 管理员
    DeputyMaster   = 5; // 副盟主
    Master         = 6; // 盟主
}

enum GameType {
    Mahjong     = 0; // 麻将
    FasterRun   = 1; // 跑得快
}

// 扑克 花色
enum PokerColorType {
    PokerUnknown = 0;
    Clubs        = 1; // 梅花
    Diamonds     = 2; // 方块
    Hearts       = 3; // 红心
    Spades       = 4; // 黑桃
}